--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autumnn-admin",
+  "name": "autumn-admin",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "seven li <liwy@mingdutech.com>",
@@ -11,8 +11,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
+    "element-ui": "^2.7.2",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
