--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
     "element-ui": "^2.7.2",
+    "font-awesome": "^4.7.0",
+    "highlight.js": "^9.12.0",
+    "marked": "^0.3.6",
+    "node-sass": "^4.5.3",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
