--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
+    "echarts": "^3.8.5",
     "element-ui": "^2.7.2",
+    "expose-loader": "^0.7.5",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
-    "marked": "^0.3.6",
-    "node-sass": "^4.5.3",
+    "jquery": "^3.4.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "marked": "^0.3.6",
+    "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
