--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "x2js": "^3.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
