--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.4.0",
+    "keymaster": "^1.6.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "marked": "^0.3.6",
