--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
-    "echarts": "^3.8.5",
+    "echarts": "^4.1.0",
+    "echarts-gl": "^1.1.1",
     "element-ui": "^2.7.2",
     "expose-loader": "^0.7.5",
     "font-awesome": "^4.7.0",
@@ -25,6 +26,7 @@
     "marked": "^0.3.6",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "sortablejs": "^1.9.0",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
