--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expose-loader": "^0.7.5",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
+    "iview": "^3.4.2",
     "jquery": "^3.4.0",
     "keymaster": "^1.6.2",
     "less": "^3.9.0",
