--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "clipboard": "^2.0.4",
     "css-loader": "^0.28.11",
     "echarts": "^4.1.0",
     "echarts-gl": "^1.1.1",
