--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less-loader": "^4.1.0",
     "marked": "^0.3.6",
     "node-sass": "^4.5.3",
+    "node-xlsx": "^0.15.0",
     "sass-loader": "^6.0.6",
     "sortablejs": "^1.9.0",
     "style-loader": "^0.19.0",
