--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "seven li <liwy@mingdutech.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --open --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
@@ -23,6 +23,7 @@
     "highlight.js": "^9.12.0",
     "iview": "^3.4.2",
     "jquery": "^3.4.0",
+    "js-base64": "^2.5.1",
     "keymaster": "^1.6.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
