--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
+    "vue-touch-keyboard": "^0.3.2",
     "vue-waterfall": "^1.0.6",
     "vuex": "^3.1.0",
     "x2js": "^3.2.6"
