--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.7.2",
     "expose-loader": "^0.7.5",
     "font-awesome": "^4.7.0",
+    "fs-extra": "^8.1.0",
     "highlight.js": "^9.12.0",
     "iview": "^3.4.2",
     "jquery": "^3.4.0",
