--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sortablejs": "^1.9.0",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
     "vue-touch-keyboard": "^0.3.2",
